package NYT.NChunkServer.NProto;

import "yt/ytlib/chunk_holder/chunk.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqFetch
{ }

message TRspFetch
{
    repeated bytes holder_addresses = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqConfirm
{
    required int64 size = 1;
    repeated bytes holder_addresses = 2;
    required bytes attributes = 3;
}

message TRspConfirm
{ }

////////////////////////////////////////////////////////////////////////////////
